Revise content for web accessibility clarity
Updated text for clarity and accessibility improvements.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     </nav>
     <header>
         <h1>Accessible Web Design</h1>
-        <h2 aria-hidden="true" style="font-size: 100%;">This page is meant to highlight the importance of web accessiblity.</h2>
+        <!-- <h2 aria-hidden="true" style="font-size: 100%;">This page is meant to highlight the importance of web accessiblity.</h2> -->
         </header>
     <main>
         <div id="intro">
             <div>
                 <h2>An Introduction to Web Accessiblity</h2>
                 <p id="p"> Over 7 million people globally (about twice the population of Oklahoma) use a screen reader to make accessing the web possible.
-                    Whithout certain functionalities coded into a web page accessiblity tools like screen readers woudl be rendered useless. 
-                    Web accessiblity is about making the web accessible to everyone no matter of ability or disability.
+                    Whithout certain functionalities coded into  a web page an accessiblity tool like a screen reader would be rendered useless. 
+                    Web accessiblity is about making the web accessible to everyone irregardless of ability or disability.
                 </p>
             </div>
             <div class="container">
@@ -37,21 +37,21 @@
                 </div>
                 <div>
                 <h3 class="container_text">Why Should You Care About Web Accessiblity?</h3>
-                <p class="container2_text">Web accessibility is not only intended to help people with disabilities it is for everyone,
-                    from a user that prefers using a keyboard because it is more efficient for them to users who are 
-                    blind, deaf, have memory issues, and other disabilities. The bottom line is accessibility matters for everyone. 
-                    Of course there is the fact that there are legal consequences for not meeting these accessibility standards, which is important, 
-                    however I think instead the focus should be on ensuring that everyone can have the same experience when accessing a web page.</p>
+                <p class="container2_text">Web accessibility is not only intended to make the web accessible to people with disabilities it is for everyone,
+                    from a user who prefers using only a keyboard because it is more efficient for them, to users who are 
+                    blind, deaf, have memory issues, etc. Accessibility matters for everyone. 
+                    The web enables us to do and learn amazing things, and everyone should have equal access to those opportunities. 
+                    By designing with accessibility in mind, we can create a more inclusive and equitable online experience for every user which means more people get to hear what you have to say</p>
                 </div>
             </div>
             <div class="container" >
                 <div>
                     <h3 class="container_text">What are common challenges for users?</h3>
                     <p class="container2_text">There are many people who live with low vision issues like Cataracts, Macular degeneration, 
-                        Glaucoma, even color blindness can be an issue when it comes to interacting with a web pages. 
-                        Low vision issues like these would make such things like a low contrast ratio even worse, 
-                        which would mean they are not getting the same experience as someone who does not experience any or even minor vision issues. 
-                        The same goes for users with amputations, hard of hearing, developmental disorders, and neurodivergence, all of these disabilities can make 
+                        Glaucoma, even color blindness can be an issue when it comes to interacting with a web page. 
+                        Low vision issues like these make issues with like low contrast ratio even worse and can render text unreadable, 
+                        which would mean some users are not getting the same experience as someone else who does not experience any vision issues. 
+                        The same goes for users with disabilities like an amputation, hard of hearing, developmental disorders, and neurodivergence, all of these disabilities can make 
                         interacting with a web page challenging.
                 </p>
                 </div>
@@ -63,14 +63,22 @@
         <div id="WCAG">
             <section>
                 <h2>What is WCAG?</h2>
-                <p>The Web Content Accessibility Guidelines is a set of standards that was designed to make the web more accessible to web users with disabilities. 
-                    The WCAG standard is published by the W3C (World Wide Web Consortium) and WAI (Web Accessibility Initiative).</p>
+                <p>WCAG (Web Content Accessibility Guidelines) is a set of standards that was designed to make the web more accessible to web users with disabilities. 
+                    The WCAG standard is published by the W3C (World Wide Web Consortium) and WAI (Web Accessibility Initiative).
+                </p>
                 <h3>History of WCAG</h3>
-                <p>The WCAG standard 1.0 was created in 1999, it included 14 guidelines that included 10 checkpoints for each guideline. 
-                    This first version included levels of conformance as well as guidelines like ones that required text alternatives.
+                <p>The WCAG standard 1.0 was created in 1999, it included 14 guidelines that had 10 checkpoints for each guideline. 
+                    This version 1.0 the included levels of conformance (A, AA, AAA) and each of these levels had different guidelines to be met for compliance.
                     In 2008 WCAG 2.0 was released which broadened and redefined the scope of previous guidelines to account for rapidly growing technology. 
-                    Version 2.0 introduced the four guideing principles of accessibility know as the POUR principles.
-                    WCAG 2.1 was released a decade later in 2018. Version 2.1 made several additions to it to version 2.0. 
+                    Additionally, version 2.0 introduced the four guideing principles of accessibility know as the POUR principles.
+                    WCAG 2.1 was released a decade later in 2018, which made several additions to it to version 2.0. 
+                </p>
+                <p>
+                    In 2023 WCAG 2.2 was released with 9 additional success criteria and guidelines to further improve web accessibility, 
+                    mostly focused on cognitive disabilities, mobile accessibility, and low vision needs.
+                </p>
+                <p>On April 24, 2026 compliance with WCAG 2.1 AA standards will required for all large public entities(serving 50,00 or more peoples), 
+                    and by April 26th, 2027 for small entities (serving fewer than 50,000 people) according to section 508 for state and local governments.
                 </p>
                 <h3>Levels of Conformance</h3>
                 <ul>
@@ -103,6 +111,7 @@
         <div id="POUR">
             <h2>What are POUR Principles</h2>
             <p>The POUR principles are the four guideing principles set out by the WCAG accessibility standard.</p>
+            <p>They stand for Perceivable, Operable, Understandable, and Robust.</p>
                 <button class="accordion">Perceivable <i class="fa-sharp fa-solid fa-chevron-down"></i></button>
                 <div  class="tab_content">
                     <p>The P in the POUR acronym stands for percievable, meaning that a user needs to be able to percieve the content in your page through at least one of thier senses (sight, sound, or touch). 
@@ -245,14 +254,15 @@
                         <a href="https://www.linkedin.com/in/ash-burks/" target="_blank"><i class="fa" style=" font-size: 24px;"><span class="background">&#xf08c;</span></i></a>
                         <a href="https://github.com/UnlikelyPheasant" target="_blank"><i class="fa" style=" font-size: 24px;"><span class="background">&#xf09b;</span></i></a>
                     </h3>                                                                       
-                    <p>I am a Florida based web developer and programmer.
-                        My current position is as a web assistant at the University of Florida Information Technology. <br>
-                        I hope to develop a signature style of aesthetic and accessible websites that combine unique artistic flair and a mindfullnes for all users.</p>
+                    <p>I am a Web Developer at the University of Florida Information Technology. <br>
+                        My responsibility is to create and maintain accessible and user-friendly web applications.
+                        As standards and best practices evolve, I strive to keep our web presence up-to-date and inclusive.
+                    </p>
+                    <p>I started this project when I was an intern, and it was a valuable learning experience. Now as a Web Developer, I continue to build on that foundation, and contribute to this site and keep it up to date.</p>
                     <p></p>
                     <h3>Education</h3>
                     <p>Santa Fe College <br>
-                        A.S Programming and Analysis <br>
-                        Expected Graduation: 2025
+                        A.S Programming and Analysis <br>Graduated: Aug 2025
                     </p>
                 </div>
             </section>
@@ -260,16 +270,16 @@
                 <div class="interest">
                     <h3>Professional Interests</h3>
                     <ul>
-                        <li>I am learning some simple animation skills like GLSL (OpenGL Shading language)</li>
-                        <li>I am learning several JavaScript libraries</li>
-                        <li>I am very interested in various game design aspects</li>
+                        <li>I am always learning new technologies and improving my skills.</li>
+                        <li>Ensuring the web is accessible to all users.</li>
+                        <li>Honing and refining my skills and knowledge.</li>
                     </ul>
                 </div>
                 <div class="interest">
                     <h3>Hobbies</h3>
                     <ul>
-                        <li>Reading Fantasy novels</li>
-                        <li>Sculpting</li>
+                        <li>Reading & Gaming</li>
+                        <li>Ceramics</li>
                         <li>Hiking</li>
                     </ul>
                 </div>
