Refine accessibility descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                 <ul>
                     <li class="level">Level A
                         <ul>
-                            <li>The minimum level of conformance, accounts for basic accessibility needs.</li>
+                            <li>These account for basic accessibility needs.</li>
                         </ul>
                     </li>
                     <li class="level">Level AA
                         <ul>
-                            <li>This higher level includes all level A conformance criteria as well as additional criteria for more inclusive accessibility needs.</li>
+                            <li>under WCAG 2.1 AA is the minimum required conformance level. This level includes all level A conformance criteria as well as additional criteria.</li>
                         </ul>
                     </li>
                     <li class="level">Level AAA
@@ -111,7 +111,6 @@
         <div id="POUR">
             <h2>What are POUR Principles</h2>
             <p>The POUR principles are the four guideing principles set out by the WCAG accessibility standard.</p>
-            <p>They stand for Perceivable, Operable, Understandable, and Robust.</p>
                 <button class="accordion">Perceivable <i class="fa-sharp fa-solid fa-chevron-down"></i></button>
                 <div  class="tab_content">
                     <p>The P in the POUR acronym stands for percievable, meaning that a user needs to be able to percieve the content in your page through at least one of thier senses (sight, sound, or touch). 
@@ -244,7 +243,6 @@
         </div>
         <div id="about_me">
             <h2>About Me</h2>
-            <p style="text-align: center;">Here is a little bit about me and my goals as a web developer.</p>
             <section id="bioContainer">
                 <div id="headshotContainer">
                 <img src="images/headshot.jpg" id="headshot" alt="A headshot of the page creator" width="75%">
@@ -262,9 +260,9 @@
                     <p></p>
                     <h3>Education</h3>
                     <p>Santa Fe College <br>
-                        A.S Programming and Analysis <br>Graduated: Aug 2025
+                        A.S Programming and Analysis 
                     </p>
-                </div>
+                 </div>
             </section>
             <section id="interests">
                 <div class="interest">
